# dmx

./: .gitignore  .gitmodules  README.md
c/: README.md
c/code/benchmarks/: README.md  run.sh
c/code/dm-x/: Kbuild  Makefile  README.md  dm-x.c
c/code/mkmint/: Makefile  README.md  mkmint.c  mkmint.h
config/: buildroot.config  busybox.config  kernel.config
qemu/: Makefile  README.md  tmux.sh
qemu/buildroot/: Makefile  README.md  start-qemu.sh
qemu/overlay/: start.sh
qemu/plainramfs/: Makefile  busybox  geninitramfs.sh  qemu-init.sh  qemu-initramfs.desc  start.sh
rust/mkdmx_ref/: Cargo.toml  README.md
rust/mkdmx_ref/src/: main.rs  utils.rs
rust/mkdmx_ref/src/utils/: lib.rs  mkdmx.rs  mkdmx_cli.rs
rust/mkdmx_ref/tests/: Makefile
