[package]
name = "mkdmx_ref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
block-utils = "0.10.0"
regex = "1"
hex = "0.4"
clap = { version = "3.0.12", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
nix = "0.23.1"


[[bin]]
name = "mkdmx_ref"
src = "src/main.rs"
